RESOLVED FIXED284937
[WebGPU] Large indirect draw calls should trigger device lost
https://bugs.webkit.org/show_bug.cgi?id=284937
Summary [WebGPU] Large indirect draw calls should trigger device lost
Mike Wyrzykowski
Reported 2024-12-18 22:37:29 PST
[WebGPU] Large indirect draw calls should trigger device lost
Attachments
Mike Wyrzykowski
Comment 1 2024-12-18 22:38:02 PST
Mike Wyrzykowski
Comment 2 2024-12-18 22:59:08 PST
EWS
Comment 3 2024-12-23 13:59:57 PST
Committed 288256@main (49f0ede27a9a): <https://commits.webkit.org/288256@main> Reviewed commits have been landed. Closing PR #38196 and removing active labels.
Mike Wyrzykowski
Comment 4 2024-12-23 14:01:48 PST
*** Bug 285059 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.