[WebGPU] Large indirect draw calls should trigger device lost https://bugs.webkit.org/show_bug.cgi?id=284937 rdar://141433630

Reviewed by Dan Glastonbury.

Sending very large (vertex or index) * instance counts to drawIndirect
or drawIndexedIndirect would lead to an unresponsive device, command
buffer errors, or other unfortunate perceived device behavior.

Limit draw calls to reasonable numbers, trigger device lost when
too complex.

* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::Device::createExternalTextureFromPixelBuffer const):
* Source/WebGPU/WebGPU/Device.h:
(WebGPU::Device::maxVerticesPerDrawCall const):
* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::computeMaxCountForDevice):
Use reasonable limits based on GPU family.

(WebGPU::Device::Device):
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::drawIndirect):
* Source/WebGPU/WebGPU/RenderPassEncoder.h:
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::draw):
(WebGPU::RenderPassEncoder::clampIndirectBufferToValidValues):
(WebGPU::RenderPassEncoder::drawIndexed):
(WebGPU::RenderPassEncoder::drawIndirect):

* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::ShaderModule::getCompilationInfo):
Assertion noticed in debug running test. It should not be an
assertion since calling getCompilationInfo() on an invalid
GPUShaderModule would trigger this, rather we should report
an empty message.

Canonical link: https://commits.webkit.org/288256@main